# TSAI_EAG_v2_sse_mcp_S8

./: .env  .gitignore  README.md  debug_google_auth.py  main.py  main_agent.py  mcp_server_google.py  mcp_server_telegram.py  pyproject.toml  requirements.txt
